--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,11 @@ dependencies:
   flutter_native_splash: ^2.4.4
   google_fonts: ^6.2.1
   flutter_screenutil: ^5.9.3
+  flutter_bloc: ^9.1.0
+  animated_toggle_switch: ^0.8.4
+  flutter_svg: ^2.1.0
+  shared_preferences: ^2.5.3
+  easy_localization: ^3.0.7+1
 
 dev_dependencies:
   flutter_test:
@@ -64,6 +69,8 @@ flutter:
   assets:
     - assets/splash/
     - assets/images/
+    - assets/icons/
+    - assets/translations/
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
