--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   flutter_svg: ^2.1.0
   shared_preferences: ^2.5.3
   easy_localization: ^3.0.7+1
+  smooth_page_indicator: ^1.2.1
 
 dev_dependencies:
   flutter_test:
