--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,13 @@ dependencies:
   shared_preferences: ^2.5.3
   easy_localization: ^3.0.7+1
   smooth_page_indicator: ^1.2.1
+  firebase_core: ^3.13.0
+  firebase_auth: ^5.5.3
+  dartz: ^0.10.1
+  google_sign_in: ^6.3.0
+  lottie: ^3.3.1
+  another_flushbar: ^1.12.30
+  iconsax_flutter: ^1.0.0
 
 dev_dependencies:
   flutter_test:
@@ -72,6 +79,7 @@ flutter:
     - assets/images/
     - assets/icons/
     - assets/translations/
+    - assets/animations/
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
