--- a/.gitignore
+++ b/.gitignore
@@ -32,7 +32,8 @@ migrate_working_dir/
 .pub-cache/
 .pub/
 /build/
-
+lib/firebase_options.dart
+android/app/google-services.json
 # Symbolication related
 app.*.symbols
 
