--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   lottie: ^3.3.1
   another_flushbar: ^1.12.30
   iconsax_flutter: ^1.0.0
+  equatable: ^2.0.7
 
 dev_dependencies:
   flutter_test:
