--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   iconsax_flutter: ^1.0.0
   equatable: ^2.0.7
   dropdown_button2: ^2.3.9
+  cloud_firestore: ^5.6.7
 
 dev_dependencies:
   flutter_test:
