--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,10 @@ dependencies:
   equatable: ^2.0.7
   dropdown_button2: ^2.3.9
   cloud_firestore: ^5.6.7
+  shimmer: ^3.0.0
+  intl: ^0.19.0
+  uuid: ^4.5.1
+  connectivity_plus: ^6.1.4
 
 dev_dependencies:
   flutter_test:
