--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,8 @@ dependencies:
   intl: ^0.19.0
   uuid: ^4.5.1
   connectivity_plus: ^6.1.4
+  location: ^8.0.0
+  google_maps_flutter: ^2.12.2
 
 dev_dependencies:
   flutter_test:
@@ -88,6 +90,7 @@ flutter:
     - assets/icons/
     - assets/translations/
     - assets/animations/
+    - assets/map_styles/
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
