--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,7 @@ dependencies:
   location: ^8.0.0
   google_maps_flutter: ^2.12.2
   geocoding: ^4.0.0
+  cached_network_image: ^3.4.1
 
 dev_dependencies:
   flutter_test:
