--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,7 +52,7 @@ dependencies:
   dropdown_button2: ^2.3.9
   cloud_firestore: ^5.6.7
   shimmer: ^3.0.0
-  intl: ^0.19.0
+  intl: 0.20.2
   connectivity_plus: ^6.1.4
   location: ^8.0.0
   google_maps_flutter: ^2.12.2
